--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shortio - Simple URL Shortener</title>
+    <title>ShortBox - Simple URL Shortener</title>
     <meta name="description" content="A simple URL shortener made with hapi.js and Node">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
       <nav>
         <div class="container">
           <div class="row">
-            <div class="column"><h1 class="logo">Shortio</h1></div>
+            <div class="column"><h1 class="logo">shortbox</h1></div>
             <div class="column social">
               <a href="http://codetuts.tech/">
                 <i class="fa fa-rss"></i>
