--- a/views/index.html
+++ b/views/index.html
@@ -19,10 +19,7 @@
           <div class="row">
             <div class="column"><h1 class="logo">shortbox</h1></div>
             <div class="column social">
-              <a href="http://codetuts.tech/">
-                <i class="fa fa-rss"></i>
-              </a>
-              <a href="https://github.com/luishendrix92/shortio">
+              <a href="https://github.com/chenka/nodejs-shorturl/">
                 <i class="fa fa-github"></i>
               </a>
             </div>
@@ -32,7 +29,7 @@
 
       <div class="container">
         <div class="row desc">
-            <p>Simple, hassle-less URL shortener for your big hyperlinks! Save space and share content in a good way with Shortio, give it a try.<p>
+            <p>Simple, hassle-less URL shortener for your big hyperlinks! Save space and share content in a good way with ShortBox, give it a try.<p>
         </div>
       </div>
     </header>
